# Galaxian1979-Remake

./: .gitignore  CMakeLists.txt  README.md  build.sh
res/: appData.json
res/fonts/: arial.json.fnt  invaders.json.fnt
res/shaders/: line.frag  line.vert  postpass.frag  sprite.frag
resources/: appData.xml
resources/shaders/: bloom.fsh  fullpass.vsh  postpass.fsh
src/: CMakeLists.txt
src/Core/: Audio.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Color.cpp  Color.hpp  Engine.cpp  Engine.hpp  Global.cpp  Global.hpp  Input.hpp  LineBatch.cpp  LineBatch.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  NonCopyable.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  SpriteBatch.cpp  SpriteBatch.hpp  Texture.cpp  Texture.hpp  Thread.hpp  Timer.hpp  Window.cpp  Window.hpp
src/Editor/: CMakeLists.txt  GalaxianEditor.cpp  GalaxianEditor.hpp  Systems.cpp  Systems.hpp  imgui_impl.cpp  main.cpp
src/Engine/: CMakeLists.txt
src/Engine/Audio/: Audio.cpp  CMakeLists.txt
src/Engine/Core/: CMakeLists.txt  Engine.cpp  Engine.hpp  Pool.hpp  Types.hpp  Util.hpp
src/Engine/Graphics/: Batch.cpp  Batch.hpp  CMakeLists.txt  Camera.hpp  Color.hpp  Drawable.hpp  LineBatch.cpp  LineBatch.hpp  Mesh.cpp  Mesh.hpp  Renderer.hpp  Shader.cpp  Shader.hpp  SpriteBatch.cpp  SpriteBatch.hpp  Texture.hpp  Vertex.hpp
src/Framework/: Application.cpp  Application.h  Audio.hpp  BaseSprite.cpp  BaseSprite.h  CMakeLists.txt  Camera.cpp  Camera.h  Camera.hpp  Color.hpp  Config.cpp  Config.h  Engine.cpp  Engine.hpp  Enumerations.h  Font.cpp  Font.h  FontManager.cpp  FontManager.h  Global.hpp  LineBatch.cpp  LineBatch.hpp  LineRenderer.cpp  LineRenderer.h  Mesh.cpp  Mesh.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  SpriteBatch.cpp  SpriteBatch.hpp  SpriteManager.cpp  SpriteManager.h  Test.cpp  Test.hpp  Texture.cpp  Texture.h  Texture.hpp  TextureManager.cpp  (+10 more)
src/Game/: CMakeLists.txt  Components.hpp  Events.hpp  Factory.cpp  Factory.hpp  GalaxianApp.cpp  GalaxianApp.hpp  Systems.cpp  Systems.hpp  main.cpp
