cmake_minimum_required(VERSION 2.8)
add_subdirectory(Engine)
add_subdirectory(Game)
add_subdirectory(Editor)

set(CORE_HDRS ${CORE_HDRS} PARENT_SCOPE)
set(CORE_SRCS ${CORE_SRCS} PARENT_SCOPE)

set(GRAPHICS_HDRS ${GRAPHICS_HDRS} PARENT_SCOPE)
set(GRAPHICS_SRCS ${GRAPHICS_SRCS} PARENT_SCOPE)

set(AUDIO_HDRS ${AUDIO_HDRS} PARENT_SCOPE)
set(AUDIO_SRCS ${AUDIO_SRCS} PARENT_SCOPE)

set(CORE_HDRS ${CORE_HDRS} PARENT_SCOPE)
set(CORE_SRCS ${CORE_SRCS} PARENT_SCOPE)

set(GAME_HDRS ${GAME_HDRS} PARENT_SCOPE)
set(GAME_SRCS ${GAME_SRCS} PARENT_SCOPE)

set(EDITOR_HDRS ${EDITOR_HDRS} PARENT_SCOPE)
set(EDITOR_SRCS ${EDITOR_SRCS} PARENT_SCOPE)
